# DoctorBot

./: .env.example  .gitignore  FAQ.txt  app.dockerfile  bot.dockerfile  docker-compose.yaml  pyproject.toml  web.dockerfile
bot/: bot.dockerfile  main.py
bot/core/: config.py
bot/handlers/: edit_drug.py  edit_protocol.py  fio.py  menu.py  protocol.py  register.py  routing.py  start.py  state.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: throttling.py
bot/models/: __init__.py
bot/orm/: patient.py  protocol.py  telegram_user.py
bot/schemas/: doctor.py  drug.py  patient.py  protocol.py  telegram_user.py
bot/utils/: dsds.py  message.py  patient.py  protocol.py  validators.py
nginx/: site.conf
nginx/servers/: site.conf
web/: db.sqlite3
web/apps/doctors/: apps.py  models.py
web/apps/drugs/: admin.py  apps.py  models.py  service.py  tasks.py
web/apps/patients/: apps.py  models.py
web/apps/protocols/: admin.py  apps.py  models.py  service.py
web/core/: asgi.py  celery.py  settings.py  wsgi.py
web/doctor/: settings.py  urls.py
web/doctors/: admin.py  apps.py  models.py
web/doctors/migrations/: 0001_initial.py
web/drugs/: admin.py  apps.py  models.py  tasks.py
web/drugs/migrations/: 0001_initial.py
web/patients/: admin.py  apps.py  models.py
web/patients/migrations/: 0001_initial.py
web/protocols/: admin.py  apps.py  models.py  tasks.py
web/protocols/migrations/: 0001_initial.py  (+4 more)
web/services/: smsc_service.py  telegram_service.py
web/utils/: base_manager.py  model_mixins.py  requests.py  telegram_service.py
(+6 files in other folders)
