[tool.poetry]
name = "doctor-bot"
version = "0.1.0"
description = ""
authors = ["Kamran <kamrankek48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.14.0"
django = "^5.1.3"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
dependency-injector = "^4.43.0"
pydantic = "^2.9.2"
aiohttp = "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
