[tool.poetry]
name = "doctor-bot"
version = "0.1.0"
description = ""
authors = ["Kamran <kamrankek48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.14.0"
django = "4.2.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
dependency-injector = "^4.43.0"
pydantic = "^2.9.2"
aiohttp = "3.9"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.2.0"
gevent = "^24.11.1"
flower = "^2.0.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
